--- a/opmaak.css
+++ b/opmaak.css
@@ -22,3 +22,6 @@ li a {
 li a:hover {
   background-color: #111;
 }
+body, strong {
+    color: #333; /* Zorgt ervoor dat sterke tekst dezelfde kleur heeft als de rest */
+}
